--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "repository": "Permissionless-Software-Foundation/jwt-bch-demo",
   "dependencies": {
     "@chris.troutner/bch-js": "^2.3.5",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "jwt-bch-lib": "^1.1.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
